# casual-mcp

./: .env-example  .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  TODO.md  casual_mcp_config.json  pyproject.toml  release.md
.claude/: prd-to-feature.local.md
.github/: dependabot.yml
.github/workflows/: ci.yml  codeql.yml  release.yml
docs/: cli-api.md  configuration.md  migration-guide.md  programmatic-usage.md  troubleshooting.md
docs/prd/: tool-search.md
examples/: README.md  chat_fetch.py  chat_weather.py  chat_with_tool_discovery.py  chat_with_toolset.py  generate_math.py  generate_session.py  generate_weather.py  generate_with_tool_discovery.py  generate_with_toolset.py  manual_construction.py
examples/tool_calling/: chat_fetch.py  chat_weather.py  config.json  manual_construction.py  multiturn.py
examples/tool_discovery/: config.json  multi_server_discovery.py  single_server_discovery.py
examples/tool_sets/: chat_with_toolset.py  config.json
mcp-servers/math/: server.py
mcp-servers/time/: server.py
mcp-servers/time-v2/: server.py
mcp-servers/weather/: server.py
mcp-servers/words/: server.py
prompt-templates/: ollama-tools.j2
src/casual_mcp/: __init__.py  cli.py  convert_tools.py  logging.py  main.py  mcp_tool_chat.py  model_factory.py  provider_factory.py  search_tools_tool.py  synthetic_tool.py  tool_cache.py  tool_discovery.py  tool_filter.py  tool_search_index.py  utils.py
src/casual_mcp/models/: __init__.py  chat_stats.py  config.py  generation_error.py  mcp_server_config.py  model_config.py  tool_discovery_config.py  toolset_config.py
src/casual_mcp/providers/: abstract_provider.py  ollama_provider.py  openai_provider.py  provider_factory.py
tests/: conftest.py  test_api_tool_discovery.py  test_chat_stats.py  test_mcp_tool_chat.py  test_migrate_config.py  test_model_factory.py  test_provider_factory.py  test_search_tools_tool.py  test_session_management.py  test_synthetic_tool.py  test_tool_cache.py  test_tool_discovery.py  test_tool_discovery_config.py  test_tool_filter.py  test_tool_search_index.py  test_tools.py  test_utils.py
