[project]
name = "casual-mcp"
version = "0.4.0"
description = "Multi-server MCP client for LLM tool orchestration"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Alex Stansfield" }]
dependencies = [
    "casual-llm>=0.1.0",
    "dateparser>=1.2.1",
    "fastapi>=0.115.12",
    "fastmcp>=2.12.4",
    "jinja2>=3.1.6",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "rich>=14.0.0",
    "typer>=0.19.2",
    "uvicorn>=0.34.2",
]

[project.urls]
"Homepage" = "https://github.com/AlexStansfield/casual-mcp"
"Repository" = "https://github.com/AlexStansfield/casual-mcp"
"Issue Tracker" = "https://github.com/AlexStansfield/casual-mcp/issues"

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
    "mypy",
    "pytest",
    "coverage"
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
casual-mcp = "casual_mcp.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[dependency-groups]
dev = [
    "black>=25.1.0",
    "coverage>=7.8.0",
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.10",
]

[tool.bumpversion]
current_version = "0.4.0"
commit = true
tag = true

[tool.bumpversion.file."pyproject.toml"]
search = 'version = "{current_version}"'
replace = 'version = "{new_version}"'
